<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/logo_foreground"
                android:contentDescription="@string/app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35sp"
                android:textColor="@color/primary_light"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/login_to_continue"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/enter_your_username_and_password_to_login"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_semibold"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/enter_username">

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/secondary_light"
                    android:inputType="text"
                    android:autofillHints="yes" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="@string/enter_password">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:textColor="@color/secondary_light"
                    android:inputType="textPassword"
                    android:autofillHints="yes" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:fontFamily="@font/nunito_bold"
                app:shapeAppearanceOverlay="@style/DefaultButton"
                android:layout_marginVertical="10dp"
                android:text="@string/login" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>