<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/ivUserImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            tools:text="Jignesh Rathod"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/primary_light"
            app:layout_constraintTop_toBottomOf="@id/ivUserImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvUserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Admin"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="@color/secondary_light"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/emailCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvUserType">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEmailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="jignesh@gmail.com"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEmailLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/contactCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/emailCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvContactLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1234567890"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvContactLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addressCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/contactCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Jamnagar"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAddressLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/enrollmentCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/addressCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvEnrollmentLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enrollment"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvEnrollment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="003203345876"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvEnrollmentLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/rollNumberCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/enrollmentCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvRollNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roll_number"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRollNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="A - 1"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRollNumberLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/batchCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/rollNumberCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvBatchLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batch"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvBatch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="TY"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvBatchLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/divisionCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/batchCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvDivisionLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/division"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDivision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="B"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvDivisionLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/semesterCard"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@id/divisionCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvSemesterLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester"
                    android:textColor="@color/primary_light"
                    android:fontFamily="@font/poppins_semibold"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvSemester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="6"
                    android:textColor="@color/secondary_light"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSemesterLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_bold"
            app:shapeAppearanceOverlay="@style/DefaultButton"
            android:layout_marginVertical="10dp"
            android:text="@string/edit_profile"
            app:layout_constraintTop_toBottomOf="@id/semesterCard"/>

        <Button
            android:id="@+id/btnUpdatePassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:fontFamily="@font/nunito_bold"
            app:shapeAppearanceOverlay="@style/DefaultButton"
            android:layout_marginVertical="10dp"
            android:text="@string/update_password"
            app:layout_constraintTop_toBottomOf="@id/btnEditProfile"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>